--- a/myserver.conf
+++ b/myserver.conf
@@ -1,8 +1,8 @@
-upstream arrail-backend {
+upstream appname-backend {
     server 127.0.0.1:8001;
     server 127.0.0.1:8002;
 }
-upstream arrail-frontend {
+upstream appname-frontend {
     server 127.0.0.1:8003;
     server 127.0.0.1:8004;
 }
@@ -14,12 +14,12 @@ server {
     #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
-        proxy_pass http://arrail-frontend/;
+        proxy_pass http://appname-frontend/;
     }
 
     location ^~ /api/v1 {
         rewrite (/api/v1/)(.*)$ $2 break; 
-        proxy_pass http://arrail-backend;
+        proxy_pass http://appname-backend;
     }
 
     #error_page  404              /404.html;
