--- a/myserver.conf
+++ b/myserver.conf
@@ -6,6 +6,12 @@ upstream appname-frontend {
     server 127.0.0.1:8003;
     server 127.0.0.1:8004;
 }
+
+upstream appname-bfs {
+    server 127.0.0.1:8080;    
+}
+include upstreams/*.conf;
+
 server {
     listen       8964;
     server_name  localhost;
@@ -19,7 +25,45 @@ server {
 
     location ^~ /api/v1 {
         rewrite (/api/v1/)(.*)$ $2 break; 
-        proxy_pass http://appname-backend;
+        proxy_pass http://appname-backend/;
+    }
+
+
+    location ^~ /api/v2 {
+        rewrite (/api/v2/)(.*)$ $2 break; 
+        proxy_pass http://appname-backend/;
+    }
+
+
+    location ^~ /api/v3/ {
+        rewrite (/api/v3/)(.*)$ $2 break;  
+        proxy_pass http://$arg_tenant_id;
+        proxy_http_version 1.1;
+        proxy_set_header Host      $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+
+    location ^~ /api/v4/ {
+        set $target $arg_tenant_id;
+        access_by_lua '
+            ngx.log(ngx.ERR,ngx.var.target)
+            local tenant_id = ngx.var.target
+            local resp=ngx.location.capture("/trouter/serviceGroups/search/findServiceAliasByTenantId",{ args = { tenant_id = tenant_id } })
+            if resp.status == ngx.HTTP_OK then
+                ngx.log(ngx.ERR,"hello inner",ngx.var.target)
+                return
+            end
+            ngx.log(ngx.ERR,"hello fail",ngx.var.target)
+            ngx.exit(resp.status)
+        ';
+        rewrite (/api/v4/)(.*)$ $2 break;  
+        proxy_pass http://appname-backend/;
+    }
+
+
+    location /trouter/ {
+        proxy_pass http://appname-bfs/;
     }
 
     #error_page  404              /404.html;
